@@ -5,7 +5,7 @@
 EAPI="4"
 RESTRICT="mirror"
 
-DESCRIPTION="A POSIX shell wrapper for wc, supporting compressed files (xz, lzma, bz2, gz)"
+DESCRIPTION="mount/unmount (and create/remove) dm-crypt filesystems according to your /etc/fstab"
 HOMEPAGE="https://github.com/vaeth/${PN}"
 SRC_URI="http://github.com/vaeth/${PN}/tarball/release-${PV} -> ${P}.tar.gz"
 
@@ -13,6 +13,10 @@ LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="zsh-completion"
+
+RDEPEND="dev-lang/perl
+	sys-fs/cryptsetup
+	virtual/perl-Getopt-Long"
 
 src_unpack() {
 	default
@@ -33,5 +37,4 @@ src_install() {
 	then	insinto /usr/share/zsh/site-functions
 			doins zsh/*
 	fi
-	dodoc README
 }
