@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*emount-2.1-r1 (03 Feb 2012)
+
+  30 Feb 2012; Martin Väth <martin@mvath.de>
+  Do not install README
+
 *emount-2.1 (31 Jan 2012)
 
   31 Jan 2012; Martin Väth <martin@mvath.de>
